# codex

./: .gitignore
.codex/skills/babysit-pr/: SKILL.md
.codex/skills/codex-bug/: SKILL.md
codex-rs/: Cargo.toml
codex-rs/agent-dashboard/: Cargo.toml
codex-rs/agent-dashboard/src/: app.rs  client.rs  lib.rs  main.rs  model.rs  picker.rs  preview.rs  render.rs
codex-rs/analytics/src/: analytics_client_tests.rs  events.rs
codex-rs/app-server/: README.md
codex-rs/app-server-daemon/: README.md
codex-rs/app-server-daemon/src/: lib.rs  settings.rs
codex-rs/app-server/src/: bespoke_event_handling.rs  codex_message_processor.rs  config_api.rs  lib.rs  main.rs  thread_status.rs
codex-rs/arg0/src/: lib.rs
codex-rs/cli/src/: main.rs  remote_control_cmd.rs
codex-rs/config/src/: config_toml.rs  hook_config.rs  hooks_tests.rs  lib.rs  profile_toml.rs  types.rs
codex-rs/core/: config.schema.json  root_agent_prompt.md  root_agent_watchdog_prompt.md  subagent_prompt.md  watchdog_agent_prompt.md
codex-rs/core-plugins/src/: installed_marketplaces.rs  manager.rs
codex-rs/core-skills/src/: manager_tests.rs
codex-rs/core/src/: codex.rs  codex_tests.rs  codex_thread.rs  compact.rs  compact_remote.rs  compact_remote_v2.rs  event_mapping.rs  event_mapping_tests.rs  features.rs  git_info_tests.rs  hook_runtime.rs  mcp_tool_call_tests.rs  shell_snapshot.rs  shell_snapshot_tests.rs  skills_watcher.rs  thread_manager.rs  turn_metadata_tests.rs
codex-rs/exec/src/: event_processor_with_human_output.rs  lib.rs  lib_tests.rs
docs/: config.md  slash_commands.md
(+243 files in other folders)
